# rsna-2024-lumbar-spine-degenerative-classification

./: .gitignore  README.md  note.md  pyproject.toml  relfections.md  winner_solution_summary.md
notebook/: 1.rsna24-lsdc-create-dataset.ipynb  2.rsna24-lsdc-create-npy.ipynb  3.rsna24-lsdc-train-coor-sagittal.ipynb  4.rsna24-lsdc-train-coor-axial.ipynb  5.rsna24-lsdc-train.ipynb  6.rsna24-lsdc-infer.ipynb
src/rsna_2024_lumbar_spine_degenerative_classification/: __init__.py
