[project]
name = "rsna-2024-lumbar-spine-degenerative-classification"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sunpnwt12", email = "sun.punnawit@gmail.com" }
]
dependencies = [
    "kaggle>=1.6.17",
    "numpy>=2.0.1",
    "polars>=1.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rsna_2024_lumbar_spine_degenerative_classification"]
